<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.teamdonut.eatto.ui.map.search.MapSearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/filter_tv_title"
            android:textColor="@color/colorHungryBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/view_filter_time"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_filter_reset"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:onClick="@{() ->viewmodel.onClearFilterClick()}"
            android:paddingStart="@dimen/space_img_btn_padding"
            android:paddingEnd="@dimen/space_img_btn_padding"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toStartOf="@+id/ib_filter_close"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:srcCompat="@drawable/ic_reset_24dp" />

        <ImageButton
            android:id="@+id/ib_filter_close"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:onClick="@{() ->viewmodel.onCloseFilterClick()}"
            android:paddingStart="@dimen/space_img_btn_padding"
            android:paddingEnd="@dimen/space_img_btn_padding"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:srcCompat="@drawable/ic_clear_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="45dp" />

        <View
            android:id="@+id/view_filter_time"
            style="@style/FilterLine"
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/gl_top" />

        <!--time-->
        <TextView
            android:id="@+id/tv_time"
            style="@style/FilterTitle"
            android:text="@string/filter_tv_time"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/view_filter_time" />

        <TextView
            android:id="@+id/tv_time_sub"
            style="@style/FilterSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_time_sub"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_time_min"
            style="@style/FilterSpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_filter_content_margin"
            android:background="@drawable/et_filter_bg"
            android:entries="@array/hour"
            app:layout_constraintEnd_toStartOf="@+id/tv_range"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_sub"
            app:selection="@{viewmodel.minTime}"
            tools:text="1" />

        <TextView
            style="@style/FilterSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_si"
            app:layout_constraintBottom_toBottomOf="@+id/acs_time_min"
            app:layout_constraintEnd_toEndOf="@+id/acs_time_min"
            app:layout_constraintTop_toTopOf="@+id/acs_time_min" />

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/filter_tv_range"
            android:textColor="@color/colorHungryLightBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/acs_time_min"
            app:layout_constraintEnd_toEndOf="@id/gl_mid"
            app:layout_constraintStart_toStartOf="@id/gl_mid"
            app:layout_constraintTop_toTopOf="@id/acs_time_min" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_time_max"
            style="@style/FilterSpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_filter_bg"
            android:entries="@array/hour"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/tv_range"
            app:layout_constraintTop_toTopOf="@id/acs_time_min"
            app:selection="@{viewmodel.maxTime}" />

        <TextView
            style="@style/FilterSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_si"
            app:layout_constraintBottom_toBottomOf="@id/acs_time_min"
            app:layout_constraintEnd_toEndOf="@id/acs_time_max"
            app:layout_constraintTop_toTopOf="@id/acs_time_min" />

        <View
            android:id="@+id/view_filter_age"
            style="@style/FilterLine"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/acs_time_min" />

        <!--age-->
        <TextView
            android:id="@+id/tv_age"
            style="@style/FilterTitle"
            android:text="@string/filter_tv_age"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/view_filter_age" />

        <TextView
            android:id="@+id/tv_age_sub"
            style="@style/FilterSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_age_sub"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_age" />

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/rb_filter_age"
            style="@style/RangeBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_age_sub"
            app:mrb_tickEnd="80"
            app:mrb_tickStart="15"
            app:onRangeBarChange="@{viewmodel::onAgeRangeBarChanged}" />


        <TextView
            android:id="@+id/tv_age_min"
            style="@style/FilterRangeBarValueText"
            android:text="@{@string/filter_tv_age_format(viewmodel.minAge)}"
            app:layout_constraintEnd_toStartOf="@+id/tv_age_max"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/rb_filter_age"
            tools:text="25세" />

        <TextView
            android:id="@+id/tv_age_max"
            style="@style/FilterRangeBarValueText"
            android:text="@{@string/filter_tv_age_format(viewmodel.maxAge)}"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/tv_age_min"
            app:layout_constraintTop_toBottomOf="@+id/rb_filter_age"
            tools:text="35세" />

        <!--people-->
        <View
            android:id="@+id/view_filter_people"
            style="@style/FilterLine"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_age_min" />

        <TextView
            android:id="@+id/tv_people"
            style="@style/FilterTitle"
            android:text="@string/filter_tv_people"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/view_filter_people" />

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/rb_filter_people"
            style="@style/RangeBarStyle"
            android:layout_width="0dp"
            android:thumb="@drawable/btn_mpe_bg"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_people"
            app:mrb_tickEnd="10"
            app:mrb_tickStart="2"
            app:onRangeBarChange="@{viewmodel::onPeopleRangeBarChanged}" />

        <TextView
            android:id="@+id/tv_people_min"
            style="@style/FilterRangeBarValueText"
            android:text="@string/filter_tv_min_people"
            app:layout_constraintEnd_toStartOf="@+id/tv_people_max"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/rb_filter_people"
            tools:text="2명" />

        <TextView
            android:id="@+id/tv_people_max"
            style="@style/FilterRangeBarValueText"
            android:text="@{@string/filter_tv_people_format(viewmodel.maxPeople)}"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/tv_people_min"
            app:layout_constraintTop_toBottomOf="@+id/rb_filter_people"
            tools:text="10명" />

        <!--budget-->
        <View
            android:id="@+id/view_filter_budget"
            style="@style/FilterLine"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_people_min" />


        <TextView
            android:id="@+id/tv_budget"
            style="@style/FilterTitle"
            android:text="@string/filter_tv_budget"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/view_filter_budget" />

        <TextView
            android:id="@+id/tv_budget_sub"
            style="@style/FilterSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_budget_sub"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_budget" />

        <EditText
            android:id="@+id/et_budget"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_filter_content_margin"
            android:background="@drawable/et_filter_bg"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:padding="@dimen/space_small_margin"
            android:text="@{String.valueOf(viewmodel.budget)}"
            android:textColor="@color/colorHungryBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_max"
            app:layout_constraintTop_toBottomOf="@id/tv_budget_sub"
            tools:text="200000" />

        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_filter_item_margin"
            android:paddingEnd="@dimen/space_filter_item_margin"
            android:text="@string/filter_tv_range"
            android:textColor="@color/colorHungryLightBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_budget"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/et_budget"
            tools:text="~" />

        <TextView
            style="@style/FilterSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tv_won"
            app:layout_constraintBottom_toBottomOf="@id/et_budget"
            app:layout_constraintEnd_toEndOf="@id/et_budget"
            app:layout_constraintTop_toTopOf="@id/et_budget" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:onClick="@{() -> viewmodel.onSubmitFilterClick(acsTimeMin.getSelectedItem().toString(),acsTimeMax.getSelectedItem().toString())}"
            android:text="@string/all_ok"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
            app:layout_constraintDimensionRatio="1:0.22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>