<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="board"
            type="com.teamdonut.eatto.data.Board" />

        <variable
            name="listener"
            type="com.teamdonut.eatto.ui.mypage.judge.JudgeItemActionListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_h_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_h_800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_960"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/gl_h_800"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/gl_v_40"
            app:layout_constraintTop_toTopOf="@+id/gl_h_100"
            app:roundedImageError="@{@drawable/kakao_default_profile_image}"
            app:roundedImageUrl="@{board.writerPhoto}"
            tools:src="@drawable/lion" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{board.title}"
            android:textColor="@color/colorHungryBlack"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/gl_v_960"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile"
            tools:text="밥 같이머거요!!!!!!!!!!~~~~~~~~~~~~~~~~" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{board.address}"
            android:textColor="@color/colorHungryLightBlack"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_restaurant"
            app:layout_constraintEnd_toEndOf="@id/gl_v_960"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="서울특별시 강남구 역삼동" />

        <TextView
            android:id="@+id/tv_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small_margin"
            android:ellipsize="end"
            android:hint="@string/board_item_restaurant_hint"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:text="@{board.restaurantName}"
            android:textColor="@color/colorHungryLightBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintEnd_toEndOf="@id/gl_v_960"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            tools:text="음식점미정" />

        <TextView
            android:id="@+id/tv_time"
            transdate="@{board.appointedTime}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/colorBtnLogoutText"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant"
            tools:text="오후 12시 40분" />

        <TextView
            android:id="@+id/tv_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/mpj_tv_people(board.currentPerson)}"
            android:textColor="@color/colorBtnLogoutText"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@+id/tv_time"
            tools:text="3명 참여" />

        <View
            android:id="@+id/v_btn"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_people"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_great"
            style="@style/MyPageJudgeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_judge_bg"
            android:gravity="center_vertical"
            android:onClick="@{() -> listener.onJudgeClick(board, 5)}"
            android:paddingTop="@dimen/space_img_btn_padding"
            android:text="@string/mypage_tv_great"
            android:textColor="@color/colorHungryBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_good"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/gl_v_40"
            app:layout_constraintTop_toBottomOf="@+id/v_btn" />

        <TextView
            android:id="@+id/tv_good"
            style="@style/MyPageJudgeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_judge_bg"
            android:onClick="@{() -> listener.onJudgeClick(board, 3)}"
            android:paddingTop="@dimen/space_img_btn_padding"
            android:text="@string/mypage_tv_good"
            android:textColor="@color/colorHungryBlack"
            app:layout_constraintBottom_toBottomOf="@id/tv_great"
            app:layout_constraintEnd_toStartOf="@id/tv_normal"
            app:layout_constraintStart_toEndOf="@id/tv_great"
            app:layout_constraintTop_toTopOf="@id/tv_great" />

        <TextView
            android:id="@+id/tv_normal"
            style="@style/MyPageJudgeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_judge_bg"
            android:onClick="@{() -> listener.onJudgeClick(board, 2)}"
            android:paddingTop="@dimen/space_img_btn_padding"
            android:text="@string/mypage_tv_normal"
            android:textColor="@color/colorHungryBlack"
            app:layout_constraintBottom_toBottomOf="@id/tv_great"
            app:layout_constraintEnd_toEndOf="@id/gl_v_960"
            app:layout_constraintStart_toEndOf="@id/tv_good"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/tv_great" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>